--- a/protocol/package.json
+++ b/protocol/package.json
@@ -43,7 +43,7 @@
     "@typechain/ethers-v5": "^7.1.0",
     "@typechain/hardhat": "^2.3.0",
     "dotenv": "^16.0.0",
-    "ethereum-waffle": "^3.0.0",
+    "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7",
     "hardhat": "^2.6.4",
     "hardhat-contract-sizer": "^2.5.0",
@@ -51,8 +51,8 @@
     "hardhat-gas-reporter": "^1.0.4",
     "lodash": "^4.17.21",
     "solhint": "^3.3.6",
-    "typechain": "^5.1.2",
-    "solidity-coverage": "^0.7.20"
+    "solidity-coverage": "^0.7.20",
+    "typechain": "^5.1.2"
   },
   "devDependencies": {
     "@ethersproject/providers": "^5.5.3",
