Delay publish-canary until after CI tests complete (#56)
* Moving publish-canary workflow into ci.yaml

* workflow_run

--- a/.github/workflows/canary.yaml
+++ b/.github/workflows/canary.yaml
@@ -1,6 +1,10 @@
 name: Canary Release
 
 on:
+  workflow_run:
+    workflows: ['Continuous Integration']
+    types:
+      - completed
   pull_request:
     branches:
       - main
