Manually trigger canary release (#57)

--- a/.github/workflows/canary.yaml
+++ b/.github/workflows/canary.yaml
@@ -1,13 +1,7 @@
 name: Canary Release
 
 on:
-  workflow_run:
-    workflows: ['Continuous Integration']
-    types:
-      - completed
-  pull_request:
-    branches:
-      - main
+  workflow_dispatch:
 
 jobs:
   publish-canary:
