--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,7 +15,7 @@ jobs:
 
       - uses: pnpm/action-setup@v2.0.1
         with:
-          version: latest
+          version: ^7.2.1
       - name: Setup Node v16
         uses: actions/setup-node@v2
         with:
