--- a/package.json
+++ b/package.json
@@ -42,5 +42,8 @@
     "turbo": "^1.0.7",
     "typescript": "^4.5.3"
   },
-  "packageManager": "pnpm@6.29.1"
+  "packageManager": "pnpm@7.2.1",
+  "engines": {
+    "pnpm": ">=7.2.1"
+  }
 }
