--- a/protocol/package.json
+++ b/protocol/package.json
@@ -45,7 +45,6 @@
     "dotenv": "^16.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7",
-    "hardhat": "^2.9.0",
     "hardhat-contract-sizer": "^2.5.0",
     "hardhat-deploy": "^0.9.2",
     "hardhat-gas-reporter": "^1.0.4",
@@ -68,6 +67,7 @@
     "chai": "^4.2.0",
     "esbuild": "^0.14.19",
     "fs-extra": "^10.0.0",
+    "hardhat": "^2.9.7",
     "prettier": "^2.5.1",
     "prettier-plugin-solidity": "^1.0.0-alpha.59",
     "solhint-plugin-prettier": "^0.0.5",
@@ -75,7 +75,8 @@
     "typescript": "^4.5.4"
   },
   "peerDependencies": {
-    "@ethersproject/providers": "^5.5.3"
+    "@ethersproject/providers": "^5.5.3",
+    "hardhat": "^2.9.7"
   },
   "publishConfig": {
     "access": "public",
