ArtistCreator foundry tests (#32)
* Adds forge-tests

* forge install: bean-contracts

* trying to fix gitmodules

* forge install: bean-contracts

* forge install: forge-std

* forge install: forge-std

* forge install: bean-contracts

* forge install: bean-contracts

* Moves forge-tests inside contracts dir - TESTS WORKING AGAIN

* Finishes tests

* Adds foundry.toml remappings

* Removing lib/bean-contracts

* EDITION_ID: number

* Removes test/upgrades.test.ts (moved)

* Removes forge-std submodule

* forge install: forge-std

* Adds forge to CI

* Reverts CI

* Adds ignore = dirty

* Deleting lib/forge-std again

* forge install: forge-std

* Switches private key list

* TestConfig.sol

* getCreateArtistSignature

* Removes cache folder

* Adds test:f command to root

* Updates foundry.toml

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -29,8 +29,8 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
-      - name: Run tests
-        run: pnpm test
+      - name: Run hardhat tests
+        run: pnpm -r --filter=@soundxyz/protocol test:hh
         env:
           NEXT_PUBLIC_ALCHEMY_KEY: ${{ secrets.NEXT_PUBLIC_ALCHEMY_KEY }}
           ADMIN_PRIVATE_KEY: ${{ secrets.ADMIN_PRIVATE_KEY }}
