--- a/protocol/package.json
+++ b/protocol/package.json
@@ -20,7 +20,9 @@
     "prepack": "pnpm -w build && bob-tsm build.ts",
     "postpublish": "gh-release",
     "seed:rinkeby": "DEPLOY_SEED_DATA=true pnpm deploy:rinkeby",
-    "test": "hardhat test",
+    "test:hh": "hardhat test",
+    "test:f": "forge test -vvv",
+    "test": "pnpm test:hh && pnpm test:f",
     "coverage": "hardhat coverage",
     "size": "hardhat size-contracts",
     "test-watcher": "bob-tsm --cjs scripts/test-watcher.ts",
