--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "pull-env": "npx vercel env pull .env",
     "release:canary": "(node scripts/canary-release.js && pnpm -r publish --access public --no-git-checks --tag alpha) || echo Skipping Canary...",
     "sym-link": "node scripts/link-env.js",
-    "test": "pnpm -r --filter=@soundxyz/protocol test"
+    "test": "pnpm -r --filter=@soundxyz/protocol test",
+    "test:f": "pnpm -r --filter=@soundxyz/protocol test:f"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
