--- a/protocol/package.json
+++ b/protocol/package.json
@@ -32,8 +32,11 @@
     "verify": "hardhat verify-contract"
   },
   "dependencies": {
+    "@ethersproject/abi": "^5.6.3",
+    "@ethersproject/bytes": "^5.6.1",
+    "@ethersproject/hardware-wallets": "^5.6.1",
     "@ethersproject/units": "^5.6.0",
-    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@0.3.0-beta.11",
+    "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@0.3.0-beta.13",
     "@nomiclabs/hardhat-etherscan": "^2.1.6",
     "@nomiclabs/hardhat-solhint": "^2.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
@@ -42,8 +45,8 @@
     "@openzeppelin/hardhat-upgrades": "^1.12.0",
     "@rari-capital/solmate": "^6.2.0",
     "@soundxyz/common": "workspace:^3.6.0",
-    "@typechain/ethers-v5": "^7.1.0",
-    "@typechain/hardhat": "^2.3.0",
+    "@typechain/ethers-v5": "^10.0.0",
+    "@typechain/hardhat": "^6.0.0",
     "dotenv": "^16.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.4.7",
@@ -53,7 +56,7 @@
     "lodash": "^4.17.21",
     "solhint": "^3.3.6",
     "solidity-coverage": "^0.7.20",
-    "typechain": "^5.1.2"
+    "typechain": "^8.0.0"
   },
   "devDependencies": {
     "@ethersproject/providers": "^5.5.3",
