ci: foundry setup (#115)
* chore: simply bootstrap foundry with scripts

* ci: run all tests

* ci: setup rust

* try

* improve setup

* maybe this:

* ci: set default shell to bash

* ci: no rust needed

* improve

* try

* maybe

* container wont work

* this hopefully works

* testt

* oh lol

* ciiii

* hehehe

* docs

--- a/.github/workflows/canary.yaml
+++ b/.github/workflows/canary.yaml
@@ -14,6 +14,11 @@ jobs:
           # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
           fetch-depth: 0
 
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
+
       - name: Setup Node.js 14.x
         uses: actions/setup-node@master
         with:
