--- a/foundry.toml
+++ b/foundry.toml
@@ -1,8 +1,6 @@
 [default]
 libraries = []
 libs = ['node_modules','lib']
-optimizer = true
-optimizer_runs = 200
 src = 'protocol/contracts'
 out = 'protocol/out'
 test = 'protocol/forge-tests'
@@ -10,4 +8,6 @@ remappings = [
   "forge-std=lib/forge-std/src/",
   "@openzeppelin=protocol/node_modules/@openzeppelin/",
   "@rari-capital/solmate=protocol/node_modules/@rari-capital/solmate/",
+  "hardhat=protocol/node_modules/hardhat/",
 ]
+gas_reports = ["ArtistV5","ArtistV6","ArtistCreatorV2","ArtistCreatorV3"]
